[tool.poetry]
name = "taiga-to-gitlab"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jbothma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taiga2gitlab = "taiga_to_gitlab.command_line:main"